sal/rtl/math.cxx
@@ -463,8 +463,6 @@ double SAL_CALL rtl_math_round(double fValue, int nDecPlaces, enum rtl_math_Roun
     {
         switch (eMode)
         {
-            case rtl_math_RoundingMode_Corrected:
-                return std::round(fValue);
             case rtl_math_RoundingMode_HalfEven:
                 if (const int oldMode = std::fegetround(); std::fesetround(FE_TONEAREST) == 0)
                 {
